# StupidSHTricks

./: .gitignore  CMakeLists.txt  Perf.cpp  Perf.h  gl_includes.h  legendre.h  main.cpp  readme.md  stb_image_impl.cpp
